--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^4.0.0",
     "@types/bootstrap": "^5.2.10",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
