--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@popperjs/core": "^2.11.8",
     "@stripe/stripe-js": "^4.0.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "@types/bootstrap": "^5.2.10",
     "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
+    "bcryptjs": "^2.4.3",
+    "jquery-ui": "^1.13.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.12.2",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -35,8 +38,12 @@
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.30",
+    "bootstrap": "^5.3.3",
     "jasmine-core": "~5.1.0",
+    "jquery": "^3.7.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
